--- a/ProyectoPA4/ProyectoFinalPA/angular.json
+++ b/ProyectoPA4/ProyectoFinalPA/angular.json
@@ -25,9 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "ProyectoPA4/ProyectoFinalPA/node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": [
+              "ProyectoPA4/ProyectoFinalPA/node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -94,5 +97,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "c63baa27-4184-46fd-9e21-ff4b3bc0ca00"
   }
 }
